# touchstone

./: .coverage  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  RUNBOOK.md  SECURITY.md  constraints.txt  pragent-constraints.txt  pyproject.toml  requirements.txt  setup.cfg
.gitcode/workflows/: ai-review.yml  codecheck.yml  python-ci.yml  touchstone.yml
.github/workflows/: calibrate.yml  ci.yml  govern.yml  learn.yml  seed.yml  touchstone.yml
.touchstone/: acceptance.yaml.example  best_practices.md  checks.yaml  pr-agent.yaml  pr.yaml  scope-rules.yaml  standards.yaml
data/: experience_store.json
docs/: DEPLOYMENT.md  audit-tfgrpo.html  data-collection-design.html  gitcode-sync-todo.md  incident-runbook.md  learning-loop-design.html  mutation-baseline.md  tfgrpo-productionization-design.html  tfgrpo-self-evolution-design.html  touchstone-arch-4plus1.html  touchstone-design-revision.html  touchstone-design.html  touchstone-index.html  touchstone-on-pr-agent.html  touchstone-slides.html  touchstone-visualization.html
docs/team/: dev-plan-2people.md  github-setup.md
examples/: real-run-examples.md  seed_experiences.py
mutants/: setup.cfg
mutants/tests/: conftest.py  helpers.py  test_autonomy.py  test_checks.py  test_contract.py  test_coverage_misc.py  test_e2e_replay.py  test_e2e_smoke.py  test_gen_best_practices.py  test_ghclient.py  test_integration_mock.py  test_learning_loop.py  test_review_provider.py  test_robustness_exceptions.py  test_stack_rules.py  test_verify.py
mutants/touchstone/: contract_check.py
scripts/: push-to-github.sh
test-workflow/: DocumentReader.java  HtmlDocumentReader.java  ReadAgentApplication.java
test-workflow/agent-read-a2a/: pom.xml  test-read-agent.ps1
test-workflow/agent-read-a2a/a2a-fixtures/: read-round1-volcengine.json  read-round2-spa-blocked.json
test-workflow/agent-read-a2a/src/main/java/com/huawei/ascend/examples/read/a2a/: ReadAgentConfiguration.java  ReadAgentConstants.java  ReadUrlTool.java  StubDocumentReader.java  SystemPromptBuilder.java
test-workflow/agent-read-a2a/src/main/resources/fixtures/: blog-comparison.html  cloudflare-403.html  pricing-bailian.html
test-workflow/agent-read-a2a/src/main/resources/prompts/: read-agent-system-prompt.md
test-workflow/agent-read-a2a/src/test/java/com/huawei/ascend/examples/read/a2a/: ReadPromptContractTest.java  ReadUrlToolTest.java
tests/: conftest.py  mutation_audit.py  test_adversarial.py  test_alert.py  test_artifacts.py  test_atomicio.py  test_autonomy.py  test_checklist.py  test_checks.py  test_cli_paths.py  test_contract.py  test_coverage_misc.py  test_doctor.py  test_e2e_llm.py  test_e2e_replay.py  test_e2e_smoke.py  test_gen_best_practices.py  test_ghclient.py  test_gitcode.py  test_hygiene_silent_except.py  test_import_hygiene.py  test_integration_mock.py  test_learning_loop.py  test_llm_budget.py  test_llm_call_tuning.py  test_logging_setup.py  test_loop_govern_calibrate.py  test_metrics.py  test_metrics_issue.py  test_perf_schema_concurrency.py  test_preflight.py  test_property.py  test_review_provider.py  test_revision_items.py  test_robustness_exceptions.py  test_silent_failure.py  test_stack_rules.py  test_telemetry.py  test_verify.py  test_verify_phases.py
touchstone/: __init__.py  alert.py  artifacts.py  atomicio.py  autonomy.py  calibrate.py  checklist.py  checks.py  contract_check.py  distill.py  doctor.py  experience_store.py  gen_best_practices.py  ghclient.py  gitcode_check.py  govern.py  ground_truth.py  learning_loop.py  lineage.py  llm_budget.py  logging_setup.py  loop.py  metrics.py  metrics_issue.py  orchestrator.py  pr_agent_runner.py  preflight.py  render.py  review_provider.py  run.py  stack_rules.py  telemetry.py
touchstone/templates/: review_report.md
verify/: __init__.py  runners.py  verify_change.py
