# ============================================================================
# pyproject.toml —— Touchstone 打包与工具配置（单一事实来源）
# ----------------------------------------------------------------------------
# 安装：pip install -e .            （开发；含 CLI 入口）
#       pip install -e .[dev]       （开发 + 测试工具链）
# 运行：python -m touchstone.orchestrator  /  python -m verify.verify_change
#       ——不再支持 `python touchstone/orchestrator.py` 脚本式调用
#         （包内已移除 sys.path hack，模块间为包绝对导入）。
# ============================================================================
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "touchstone-gate"
version = "0.9.0"
description = "给 AI 时代的代码合入装一把试金石：PR 评审归一 + 确定性门禁 + 独立验证 + 渐进自治"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    # 原则：优先成熟开源实现；手写仅限本系统独有领域逻辑或硬运行时约束。
    "pyyaml>=6.0",
    "requests>=2.31",   # GitHub REST/GraphQL（连接池 + urllib3.Retry 退避，见 ghclient）
    "unidiff>=0.7",     # unified diff 解析（替代手写状态机）
    "openai>=1.30",     # LLM 调用（OpenAI 兼容；支持自定义 base_url）
]

[project.optional-dependencies]
# verify_change（命门）参考实现的执行侧依赖
verify = ["pytest>=7.0", "coverage>=7.0"]
dev = [
    "pytest>=7.0",
    "coverage>=7.0",
    "hypothesis>=6.0",  # 属性测试（tests/test_property.py）
    "mutmut>=2.0",      # 变异测试（setup.cfg [mutmut]；产物 mutants/ 不入库）
    "mypy>=1.8",        # 类型检查（渐进：全局宽松，见 [tool.mypy]）
    "types-PyYAML", "types-requests",
]

[project.scripts]
touchstone = "touchstone.run:main"

[tool.setuptools]
packages = ["touchstone", "verify"]

[tool.setuptools.package-data]
touchstone = ["templates/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["touchstone", "verify"]

[tool.coverage.report]
# 门槛对自己生效（verify 对被检仓库的 COV_MIN=0.6 同款精神）；CI 里 fail_under 生效
fail_under = 88
show_missing = false

[tool.ruff]
# 克制原则：只抓真缺陷（pyflakes/语法/裸 except/可变默认参），不做风格重排——
# 存量代码的注释版式是决策日志资产，不让格式化噪音淹没语义变更。
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",        # pyflakes：未定义名/未用导入/未用变量/重复参数——全是真缺陷
    "E7",       # 比较与语法陷阱（== None、is 字面量等）
    "E9",       # 语法/缩进错误（本仓历史上真踩过：全角逗号 SyntaxError 进过 main）
    "B",        # bugbear：可变默认参、except 元组漏括号、无用表达式等
    "PLE",      # pylint error 级
]
ignore = [
    "E741",     # 允许短变量名（数学/迭代惯用）
    "E701", "E702", "E731",  # 单行紧凑写法是本仓刻意风格（决策日志式注释同款克制原则）
    "B008",     # 允许函数调用作默认参（本仓无此模式的滥用面）
]

[tool.ruff.lint.per-file-ignores]
# 测试允许未用导入（importorskip 探测）与断言技巧
"tests/*" = ["F401", "B011", "B017"]

[tool.mypy]
# 渐进策略：全局宽松只抓真类型错误，不要求存量代码补注解；
# 新模块随写随注解，成熟一个在 [[tool.mypy.overrides]] 里收紧一个。
python_version = "3.10"
ignore_missing_imports = true    # pr-agent/unidiff 等无 stub 的三方
# check_untyped_defs：暂不开——本仓 dict 密集风格下推断噪音过大（首测 71 处几乎全是
# report/store 字典的 union 推断），开它等于强制全量注解冲刺。等核心结构补上 TypedDict
# 后再逐模块收紧。
warn_unused_ignores = true
files = ["touchstone", "verify"]
